--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.+'
+
+
+    compile 'com.android.support:appcompat-v7:27.1.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/hyphenatechat_3.4.1.jar')
     compile 'com.android.support:multidex:1.0.0'
@@ -51,7 +53,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.0'
     //greendao依赖
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
 }
 afterEvaluate {
     tasks.matching {
